# beets-canonical-plugin

./: README.md  pyproject.toml
beetsplug/: canonical.py  rewrite.py
