[tool.poetry]
name = "beets-canonical-plugin"
version = "0.1.0"
description = ""
authors = ["Hidetoshi Hirokawa <h.hirokawa128@gmail.com>"]
license = "MIT"
packages = [
    { include = "beetsplug" }
]

[tool.poetry.dependencies]
python = "^3.9"
beets = ">=1.4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
